--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,2 +1,8 @@
 $primary-color: rgb(255, 0, 0);
 $padding: 1rem;
+
+$footer-colors: (
+  background: #dfdfdf,
+  alert: rgba(var(--bs-link-color-rgb)),
+  text: #545454
+);
