--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,23 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'variables';
 @import 'styles';
+@import 'footer';
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  font-family: system-ui, sans-serif;
+  background-color: #fff;
+  color: #111;
+}
