--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,8 @@
-$primary-color: rgb(255, 0, 0);
-$padding: 1rem;
+$white: #fff;
+$gray: #545454;
+$cyan: #07d3a9;
+$light-blue: #2089f2;
+$light-gray: #aaa;
 
 $footer-colors: (
   background: #dfdfdf,
