--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,7 +1,7 @@
 $white: #fff;
 $gray: #545454;
 $cyan: #07d3a9;
-$light-blue: #2089f2;
+$light-blue: #0e93f4;
 $light-gray: #aaa;
 
 $footer-colors: (
