--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,13 +11,25 @@
 }
 
 html, body {
-  height:100%;
-  width:100%;
+  min-height: 100vh;
+  width: 100%;
   font-size: 16px;
   line-height: 1.5;
   font-family: system-ui, sans-serif;
   background-color: $white;
   color: #111;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+
+}
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
