--- a/resources/sass/pages/home.scss
+++ b/resources/sass/pages/home.scss
@@ -3,7 +3,7 @@
     color: $white;
     padding: 4rem 0;
     text-align: center;
-    min-height: 40vh;
+    flex: 1 1 auto;
 
     &__title {
         font-size: 3.5rem;
