--- a/resources/sass/pages/home.scss
+++ b/resources/sass/pages/home.scss
@@ -16,6 +16,7 @@
         width: 35%;
         margin: 0 auto;
         height: 3rem;
+        border-radius: 6px;
 
         input {
             width: 100%;
@@ -25,28 +26,81 @@
             font-size: 1rem;
             padding: 0 1rem;
             border-radius: 6px;
-        }
-    }
 
+            &:focus {
+                outline: none;
+                border-color: transparent;
+                box-shadow: 0 0 0 3px rgb(255, 255, 255);
+            }
 
-    &__form {
-        margin-top: 1.5rem;
-        display: inline-flex;
-
-        input {
-            padding: 0.75rem;
-            width: 300px;
-            border: none;
-            border-radius: 5px 0 0 5px;
-        }
-
-        button {
-            padding: 0.75rem;
-            background: $white;
-            border: none;
-            border-radius: 0 5px 5px 0;
-            cursor: pointer;
+            &:active {
+                color: none;
+            }
         }
     }
 }
+.aa {
+  &-Autocomplete {
+    border-radius: 6px;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    outline: none !important;
+    border: none !important;
+  }
 
+  &-Form {
+    border: none !important;
+    border-radius: 6px !important;
+  }
+
+  &-InputWrapper {
+    box-shadow: 0 0 12px 4px rgba(0, 0, 0, 0.15);
+    width: 35%;
+    margin: 0 auto;
+    height: 3rem;
+  }
+
+  &-InputWrapperPrefix, &-DetachedSearchButtonIcon {
+    display: none !important;
+  }
+
+  &-Input {
+    border: none;
+    outline: none;
+    box-shadow: none;
+    background: transparent;
+    border-radius: 6px 6px 0 0;
+
+    &:focus {
+      outline: none !important;
+      box-shadow: none !important;
+      border-color: transparent !important;
+    }
+  }
+
+  &-Panel {
+    border-radius: 0 0 6px 6px;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    border-top: none;
+    background: white;
+  }
+
+  &-SubmitButton,
+  &-ClearButton {
+    outline: none !important;
+    border: none !important;
+
+    &:focus {
+      outline: none !important;
+      box-shadow: none !important;
+      border: none !important;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .aa-InputWrapperPrefix {
+    display: none !important;
+  }
+}
