--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -9,3 +9,8 @@ $footer-colors: (
   alert: rgba(var(--bs-link-color-rgb)),
   text: #545454
 );
+
+$city-detail-colors: (
+  background: #f8f8f8,
+  city-name: #087bf0
+);
