--- a/resources/sass/layouts/header.scss
+++ b/resources/sass/layouts/header.scss
@@ -1,5 +1,7 @@
 .header {
     margin-top: 1.5rem;
+    border-bottom: 1px solid lighten($light-gray, 20%);
+
 
     .container {
         margin-bottom: 1.0rem;
